# EdgeDetectionApp

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/shubham/edgedetectionapp/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/shubham/edgedetectionapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/shubham/edgedetectionapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
